Added initial card-panel layout to config and inventory

--- a/src/app/layout/header-panel/header-panel.html
+++ b/src/app/layout/header-panel/header-panel.html
@@ -6,7 +6,7 @@
   <span>{{loc('title')}}</span>
   <span class="spacer"></span>
 
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+  <button mat-icon-button class="example-icon">
     <mat-icon>share</mat-icon>
   </button>
   <!--	<hpe-notification-button tbRight></hpe-notification-button>-->
