--- a/src/app/layout/main-panel/work-panel/admin/configuration/configuration.panel.html
+++ b/src/app/layout/main-panel/work-panel/admin/configuration/configuration.panel.html
@@ -1,6 +1,26 @@
-Config
+<mat-card class="panelStyle">
+  <mat-card-header>
+    <div mat-card-avatar>
+      <mat-icon fontIcon="tune"></mat-icon>
+    </div>
 
-<!--<hpe-card-panel icon="fa-cog" [title]="loc('title')">-->
+    <mat-card-title>{{loc('title')}}</mat-card-title>
+  </mat-card-header>
+
+  <mat-card-actions>
+    <button mat-button>SAVE</button>
+  </mat-card-actions>
+
+  <mat-card-content>
+    <mat-divider></mat-divider>
+    <p></p>
+    <p>
+      ...
+    </p>
+  </mat-card-content>
+</mat-card>
+
+<!--<hpe-card-panel icon="fa-cog" [title]="">-->
 <!--	<div cpBody>-->
 <!--		<hpe-form-panel>-->
 
