--- a/src/app/layout/main-panel/work-panel/admin/configuration/configuration.panel.scss
+++ b/src/app/layout/main-panel/work-panel/admin/configuration/configuration.panel.scss
@@ -6,6 +6,8 @@
 //=== found in the LICENSE file
 //=============================================================================
 
-//@import "../../../../constants";
+.panelStyle {
+  margin: 32px;
+}
 
 //=============================================================================
