--- a/src/app/layout/main-panel/work-panel/market/inventory/inventory.panel.html
+++ b/src/app/layout/main-panel/work-panel/market/inventory/inventory.panel.html
@@ -1,34 +1,37 @@
-<table mat-table [dataSource]="marketList" class="mat-elevation-z8 demo-table">
-  <!-- Position Column -->
-  <ng-container matColumnDef="position">
-    <th mat-header-cell *matHeaderCellDef>No.</th>
-    <td mat-cell *matCellDef="let element">{{element.position}}</td>
-  </ng-container>
+<mat-card class="panelStyle">
+  <mat-card-header>
+    <div mat-card-avatar>
+      <mat-icon fontIcon="inventory"></mat-icon>
+    </div>
 
-  <!-- Name Column -->
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef>Name</th>
-    <td mat-cell *matCellDef="let element">{{element.name}}</td>
-  </ng-container>
+    <mat-card-title>{{loc('title')}}</mat-card-title>
+  </mat-card-header>
 
-  <!-- Weight Column -->
-  <ng-container matColumnDef="weight">
-    <th mat-header-cell *matHeaderCellDef>Weight</th>
-    <td mat-cell *matCellDef="let element">{{element.weight}}</td>
-  </ng-container>
+  <mat-card-actions>
+    <button mat-button>SAVE</button>
+  </mat-card-actions>
 
-  <!-- Symbol Column -->
-  <ng-container matColumnDef="symbol">
-    <th mat-header-cell *matHeaderCellDef>Symbol</th>
-    <td mat-cell *matCellDef="let element">{{element.symbol}}</td>
-  </ng-container>
+  <mat-card-content>
+    <table mat-table [dataSource]="marketList">
+      <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
+        <th mat-header-cell *matHeaderCellDef> {{column}} </th>
+        <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+      </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr
-      mat-row
-      (click)="onRowClick(row)"
-      *matRowDef="let row; columns: displayedColumns;"
-  ></tr>
-</table>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" matRipple
+          (click)="onRowClick(row)">
+      </tr>
+    </table>
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [length]="45" [pageSize]="25"></mat-paginator>
+  </mat-card-content>
+</mat-card>
 
-<!--[class.demo-row-is-clicked]="clickedRows.has(row)"-->
+<!--[class.demo-row-is-clicked]="clickedRows.has(row)"
+
+ <mat-text-column name="position"></mat-text-column>
+ <mat-text-column name="position" [headerText]="headerText"></mat-text-column>
+  <mat-text-column name="name" headerText="Element"></mat-text-column>
+  <mat-text-column name="weight" [dataAccessor]="getWeight"></mat-text-column>
+   <mat-text-column name="symbol" justify="end"></mat-text-column>
+-->
