Used standalone architecture and added initial material table support

--- a/src/app/layout/main-panel/work-panel/home/home.panel.html
+++ b/src/app/layout/main-panel/work-panel/home/home.panel.html
@@ -1,6 +1,6 @@
 HOME
 
-<!--<hpe-inventory-panel-->
+<!--<hpe-trading-system-panel-->
 <!--	rowId            = "id"-->
 <!--	icon             = "fa-users"-->
 <!--	[title]          = "loc('userList')"-->
@@ -10,5 +10,5 @@ HOME
 <!--	[service]        = "allUsersService"-->
 <!--	[contextMenu]    = "userPopupMenu"-->
 <!--	[multiSelection] = "true">-->
-<!--</hpe-inventory-panel>-->
+<!--</hpe-trading-system-panel>-->
 
