--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/trading-system.panel.scss
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/trading-system.panel.scss
@@ -7,7 +7,21 @@
 //=============================================================================
 
 .panelStyle {
-  margin: 32px;
+	margin: 16px;
+}
+
+.mat-mdc-row .mat-mdc-cell {
+	border-bottom: 1px solid transparent;
+	border-top: 1px solid transparent;
+	cursor: pointer;
+}
+
+.mat-mdc-row:hover .mat-mdc-cell {
+	border-color: currentColor;
+}
+
+.row-is-clicked {
+	background-color: #d0e0f0;
 }
 
 //=============================================================================
