--- a/src/app/component/panel/flex-table/flex-table.panel.scss
+++ b/src/app/component/panel/flex-table/flex-table.panel.scss
@@ -6,8 +6,28 @@
 //=== found in the LICENSE file
 //=============================================================================
 
-.panel-style {
-	margin: 16px;
+table {
+  width: 100%;
+}
+
+.mat-mdc-row .mat-mdc-cell {
+  border-top: 1px solid transparent;
+  cursor: pointer;
+}
+
+.mat-mdc-row:hover .mat-mdc-cell {
+  border-color: currentColor;
+}
+
+.mat-mdc-form-field {
+  font-size: 14px;
+  width: 100%;
+}
+
+.table-data-container {
+  min-height: 200px;
+  max-height: 512px;
+  overflow: auto;
 }
 
 //=============================================================================
