--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/trading-system.panel.html
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/trading-system.panel.html
@@ -1,4 +1,4 @@
-<mat-card class="panelStyle">
+<mat-card class="panel-style">
 	<mat-card-header>
 		<div mat-card-avatar>
 			<mat-icon fontIcon="inventory"></mat-icon>
@@ -16,22 +16,11 @@
 	<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
 	<mat-card-content>
-		<table mat-table [dataSource]="tableData" matSort>
-			<ng-container [matColumnDef]="column" *ngFor="let column of tableColumns">
-				<th mat-header-cell *matHeaderCellDef mat-sort-header> {{column}} </th>
-				<td mat-cell *matCellDef="let element"> {{element[column]}} </td>
-			</ng-container>
-
-			<tr mat-header-row *matHeaderRowDef="tableColumns"></tr>
-			<tr mat-row
-			    *matRowDef="let row; columns: tableColumns;"
-			    (click)="onRowClick(row)"
-			    [class.row-is-clicked]="isRowClicked(row)"
-			></tr>
-		</table>
-
-		<mat-paginator [pageSizeOptions]="[10, 25, 50, 100]"
-		               showFirstLastButtons
-		></mat-paginator>
+    <flex-table
+        locCode       = "pages.portfolio.trading-system"
+        [columns]     = "columns"
+        [dataProvider]= "service"
+        (onRowsSelected)="onRowSelected($event)"
+    ></flex-table>
 	</mat-card-content>
 </mat-card>
