--- a/src/app/component/panel/flex-table/flex-table.panel.html
+++ b/src/app/component/panel/flex-table/flex-table.panel.html
@@ -1,7 +1,13 @@
-<mat-form-field>
-  <mat-label>Filter</mat-label>
-  <input matInput (keyup)="applyFilter($event)" placeholder="...">
-</mat-form-field>
+<div>
+  <mat-form-field>
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="...">
+  </mat-form-field>
+  <span class="spacer"></span>
+  <button mat-icon-button (click)="reload()">
+    <mat-icon>refresh</mat-icon>
+  </button>
+</div>
 
 <div class="table-data-container">
   <table mat-table [dataSource]="tableData" matSort>
@@ -25,9 +31,16 @@
 
     <!-- Other columns -->
 
-    <ng-container [matColumnDef]="column" *ngFor="let column of tableColumns">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{column}} </th>
-      <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+    <ng-container [matColumnDef]="column.column" *ngFor="let column of tableColumns">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{column.header}} </th>
+      <td mat-cell *matCellDef="let element">
+        <mat-icon *ngIf="column.iconStyler"
+                  fontIcon="{{column.iconStyler.getStyle(element[column.column], element).icon}}"
+                  style="color:{{column.iconStyler.getStyle(element[column.column], element).color}}"
+        ></mat-icon>
+        <span *ngIf="column.transcoder">{{column.transcoder.transcode(element[column.column], element)}}</span>
+        <span *ngIf="!column.transcoder && !column.iconStyler">{{element[column.column]}}</span>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
@@ -37,7 +50,7 @@
     ></tr>
 
     <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan=[displayedColumns.length]>No data</td>
+      <td class="mat-cell" colspan=[displayedColumns.length]>{{loc("no-data")}}</td>
     </tr>
   </table>
 </div>
