--- a/src/app/component/panel/flex-table/flex-table.panel.scss
+++ b/src/app/component/panel/flex-table/flex-table.panel.scss
@@ -6,6 +6,10 @@
 //=== found in the LICENSE file
 //=============================================================================
 
+.spacer {
+  flex: 1 1 auto;
+}
+
 table {
   width: 100%;
 }
@@ -21,7 +25,7 @@ table {
 
 .mat-mdc-form-field {
   font-size: 14px;
-  width: 100%;
+  width: 90%;
 }
 
 .table-data-container {
