--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/trading-system.panel.html
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/trading-system.panel.html
@@ -10,13 +10,13 @@
 	<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
 	<mat-card-actions>
-		<button mat-button>SAVE</button>
+		<button mat-button (click)="onViewClick()" [disabled]="disView">{{button("view")}}</button>
 	</mat-card-actions>
 
 	<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
 	<mat-card-content>
-    <flex-table
+    <flex-table #table
         locCode       = "pages.portfolio.trading-system"
         [columns]     = "columns"
         [dataProvider]= "service"
