--- a/src/app/layout/main-panel/main.panel.html
+++ b/src/app/layout/main-panel/main.panel.html
@@ -5,7 +5,7 @@
 	</mat-sidenav>
 
     <mat-sidenav-content>
-        <work-panel></work-panel>
+        <work-panel class="workPanel"></work-panel>
     </mat-sidenav-content>
 
     <mat-sidenav #rightNavig position="end" disableClose="true">
