--- a/src/app/component/panel/flex-table/flex-table.panel.html
+++ b/src/app/component/panel/flex-table/flex-table.panel.html
@@ -1,59 +1,56 @@
-<div>
-  <mat-form-field>
+<div class="search-panel">
+  <mat-form-field class="search-field">
     <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="...">
   </mat-form-field>
-  <span class="spacer"></span>
   <button mat-icon-button (click)="reload()">
     <mat-icon>refresh</mat-icon>
   </button>
 </div>
 
-<div class="table-data-container">
-  <table mat-table [dataSource]="tableData" matSort>
+<table mat-table [dataSource]="tableData" matSort class="table-panel">
 
-    <!-- Checkbox column -->
-    <ng-container matColumnDef="select">
-      <th mat-header-cell *matHeaderCellDef>
-        <mat-checkbox (change)="$event ? toggleAllRows() : null"
-                      [checked]="selection.hasValue() && isAllSelected()"
-                      [indeterminate]="selection.hasValue() && !isAllSelected()"
-        ></mat-checkbox>
-      </th>
+  <!-- Checkbox column -->
+  <ng-container matColumnDef="select">
+    <th mat-header-cell *matHeaderCellDef>
+      <mat-checkbox (change)="$event ? toggleAllRows() : null"
+                    [checked]="selection.hasValue() && isAllSelected()"
+                    [indeterminate]="selection.hasValue() && !isAllSelected()"
+      ></mat-checkbox>
+    </th>
 
-      <td mat-cell *matCellDef="let row">
-        <mat-checkbox (click)="$event.stopPropagation()"
-                      (change)="$event ? selection.toggle(row) : null"
-                      [checked]="selection.isSelected(row)"
-        ></mat-checkbox>
-      </td>
-    </ng-container>
+    <td mat-cell *matCellDef="let row">
+      <mat-checkbox (click)="$event.stopPropagation()"
+                    (change)="$event ? selection.toggle(row) : null"
+                    [checked]="selection.isSelected(row)"
+      ></mat-checkbox>
+    </td>
+  </ng-container>
 
-    <!-- Other columns -->
+  <!-- Other columns -->
 
-    <ng-container [matColumnDef]="column.column" *ngFor="let column of tableColumns">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{column.header}} </th>
-      <td mat-cell *matCellDef="let element">
-        <mat-icon *ngIf="column.iconStyler"
-                  fontIcon="{{column.iconStyler.getStyle(element[column.column], element).icon}}"
-                  style="color:{{column.iconStyler.getStyle(element[column.column], element).color}}"
-        ></mat-icon>
-        <span *ngIf="column.transcoder">{{column.transcoder.transcode(element[column.column], element)}}</span>
-        <span *ngIf="!column.transcoder && !column.iconStyler">{{element[column.column]}}</span>
-      </td>
-    </ng-container>
+  <ng-container [matColumnDef]="column.column" *ngFor="let column of tableColumns">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> {{column.header}} </th>
+    <td mat-cell *matCellDef="let element">
+      <mat-icon *ngIf="column.iconStyler"
+                fontIcon="{{column.iconStyler.getStyle(element[column.column], element).icon}}"
+                style="color:{{column.iconStyler.getStyle(element[column.column], element).color}}"
+      ></mat-icon>
+      <span *ngIf="column.transcoder">{{column.transcoder.transcode(element[column.column], element)}}</span>
+      <span *ngIf="!column.transcoder && !column.iconStyler">{{element[column.column]}}</span>
+    </td>
+  </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-    <tr mat-row
-        *matRowDef="let row; columns: displayedColumns;"
-        (click)="onRowClick(row)"
-    ></tr>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+  <tr mat-row
+      *matRowDef="let row; columns: displayedColumns;"
+      (click)="onRowClick(row)"
+  ></tr>
 
-    <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan=[displayedColumns.length]>{{loc("no-data")}}</td>
-    </tr>
-  </table>
-</div>
+  <tr class="mat-row" *matNoDataRow>
+    <td class="mat-cell" colspan=[displayedColumns.length]>{{loc("no-data")}}</td>
+  </tr>
+</table>
 
 <!--		<mat-paginator [pageSizeOptions]="[10, 25, 50, 100]"-->
 <!--		               showFirstLastButtons-->
