--- a/src/app/layout/main-panel/main.panel.scss
+++ b/src/app/layout/main-panel/main.panel.scss
@@ -12,11 +12,20 @@
 
 .mainPanel {
 	position : absolute;
-	top      : 64px;
+	top      : 48px;
 	bottom   : 0;
 	right    : 0;
 	left     : 0;
 	margin   : 0;
+}
+
+//=============================================================================
+
+.workPanel {
+  position : relative;
+  display  : block;
+  height   : 100%;
+  overflow : auto;
 }
 
 //=============================================================================
