Completed portfolio monitoring

--- a/src/app/component/panel/flex-table/flex-table.panel.html
+++ b/src/app/component/panel/flex-table/flex-table.panel.html
@@ -48,7 +48,7 @@
   ></tr>
 
   <tr class="mat-row" *matNoDataRow>
-    <td class="mat-cell" colspan=[displayedColumns.length]>{{loc("no-data")}}</td>
+    <td class="mat-cell" colspan=[displayedColumns.length]>{{loc("noData")}}</td>
   </tr>
 </table>
 
