--- a/src/app/layout/main-panel/work-panel/portfolio/monitoring/monitoring.panel.scss
+++ b/src/app/layout/main-panel/work-panel/portfolio/monitoring/monitoring.panel.scss
@@ -7,44 +7,99 @@
 //=============================================================================
 
 .main-layout {
-  margin: 0 16px 0 16px;
-  position : relative;
-  height   : 100%;
-  overflow : auto;
-  display  : flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: flex-start;
-  align-items: stretch;
-  gap: 16px 16px;
-}
-
-//=============================================================================
-
-.panel-layout {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: flex-start;
   align-items: stretch;
-  gap: 16px 16px;
-  flex: 1 1 auto;
+  gap: 16px;
+  height   : 100%;
+  overflow: hidden;
+  padding: 0 8px 0 8px;
+}
+
+//=============================================================================
+
+.left-layout {
+  width: 320px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: stretch;
+  gap: 16px;
+  overflow: hidden;
+}
+
+//=============================================================================
+
+.portfolio-layout {
+  height: 220px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: stretch;
+  gap: 0;
+  overflow: hidden;
 }
 
 //=============================================================================
 
 .tree-layout {
+  flex: 1 1 auto;
+  overflow: auto;
 }
 
 //=============================================================================
 
-.list-layout {
+.ts-layout {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: stretch;
+  gap: 0;
+  overflow: hidden;
+  flex: 1 1 auto;
+}
+
+//=============================================================================
+
+.tsTable-layout {
+  flex: 1 1 auto;
+  overflow: auto;
+}
+
+//=============================================================================
+
+.center-layout {
+  flex: 1 1 auto;
+}
+
+//=============================================================================
+
+.options-layout {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: baseline;
+  gap: 16px;
+}
+
+//=============================================================================
+
+.spacer {
+  flex: 1 1 auto;
 }
 
 //=============================================================================
 
 .chart-layout {
-  flex: 1 1 auto;
+//  flex: 1 1 auto;
+  width: 100%;
+  height: 100%;
 }
 
 //=============================================================================
