Added authentication and authorization. Added trading systems panel

--- a/src/app/layout/app.component.html
+++ b/src/app/layout/app.component.html
@@ -1,2 +1,4 @@
-<header-panel></header-panel>
-<main-panel></main-panel>
+<div *ngIf="sessionService.isAuthenticated">
+  <header-panel></header-panel>
+  <main-panel></main-panel>
+</div>
