Updated with latest code

--- a/src/app/component/form/input-text-required/input-text-required.scss
+++ b/src/app/component/form/input-text-required/input-text-required.scss
@@ -6,5 +6,8 @@
 //=== found in the LICENSE file
 //=============================================================================
 
+.main-layout {
+  width: 300px;
+}
 
 //=============================================================================
