--- a/src/app/component/panel/right-title/right-title.panel.scss
+++ b/src/app/component/panel/right-title/right-title.panel.scss
@@ -1,11 +1,26 @@
 //=============================================================================
 //===
-//=== Copyright (C) 2022 Andrea Carboni
+//=== Copyright (C) 2023 Andrea Carboni
 //===
 //=== Use of this source code is governed by an MIT-style license that can be
 //=== found in the LICENSE file
 //=============================================================================
 
-//@import "../../../../constants";
+.toolbar {
+  background-color: #F8E8E0 ;
+}
+
+//=============================================================================
+
+.title {
+  margin-left : 16px;
+  margin-right: 16px;
+}
+
+//=============================================================================
+
+.filler {
+  flex: 1 1 auto;
+}
 
 //=============================================================================
