--- a/src/app/component/panel/simple-table/simple-table.panel.html
+++ b/src/app/component/panel/simple-table/simple-table.panel.html
@@ -3,31 +3,9 @@
     <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="...">
   </mat-form-field>
-  <button mat-icon-button (click)="reload()">
-    <mat-icon>refresh</mat-icon>
-  </button>
 </div>
 
 <table mat-table [dataSource]="tableData" matSort class="table-panel">
-
-  <!-- Checkbox column -->
-  <ng-container matColumnDef="select">
-    <th mat-header-cell *matHeaderCellDef>
-      <mat-checkbox (change)="$event ? toggleAllRows() : null"
-                    [checked]="selection.hasValue() && isAllSelected()"
-                    [indeterminate]="selection.hasValue() && !isAllSelected()"
-      ></mat-checkbox>
-    </th>
-
-    <td mat-cell *matCellDef="let row">
-      <mat-checkbox (click)="$event.stopPropagation()"
-                    (change)="$event ? selection.toggle(row) : null"
-                    [checked]="selection.isSelected(row)"
-      ></mat-checkbox>
-    </td>
-  </ng-container>
-
-  <!-- Other columns -->
 
   <ng-container [matColumnDef]="column.column" *ngFor="let column of tableColumns">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> {{column.header}} </th>
@@ -42,16 +20,9 @@
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-  <tr mat-row
-      *matRowDef="let row; columns: displayedColumns;"
-      (click)="onRowClick(row)"
-  ></tr>
+  <tr mat-row        *matRowDef="let row; columns: displayedColumns;"></tr>
 
   <tr class="mat-row" *matNoDataRow>
     <td class="mat-cell" colspan=[displayedColumns.length]>{{loc("noData")}}</td>
   </tr>
 </table>
-
-<!--		<mat-paginator [pageSizeOptions]="[10, 25, 50, 100]"-->
-<!--		               showFirstLastButtons-->
-<!--		></mat-paginator>-->
