--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/filtering/filtering.panel.scss
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/filtering/filtering.panel.scss
@@ -22,6 +22,7 @@
 
 .left-layout {
   width: 320px;
+  overflow-y: auto;
 }
 
 .left-layout .mat-expansion-panel-header-title {
@@ -33,6 +34,16 @@
 
 .center-layout {
   flex: 1 1 auto;
+
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: stretch;
+  gap: 16px;
+  height   : 100%;
+  overflow: hidden;
+  padding: 0 8px 0 8px;
 }
 
 //=============================================================================
@@ -44,8 +55,8 @@
 //=============================================================================
 
 .chart-layout {
-  width: 100%;
-  height: 100%;
+  flex: 1 1 auto;
+  overflow-y: auto;
 }
 
 //=============================================================================
@@ -55,6 +66,7 @@
   font-weight: 600;
   text-align: center;
   width: 100%;
+  padding-top: 10px;
 }
 
 //=============================================================================
