Finished filter optimization functionality

--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/filtering/optimize/result.dialog.html
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/filtering/optimize/result.dialog.html
@@ -1,5 +1,18 @@
 <h2 mat-dialog-title>{{loc("title_result")}}</h2>
 <mat-dialog-content class="mat-typography">
+  <table class="summary-layout">
+    <tr>
+      <td>{{loc("taTotalSteps")}}</td>
+      <td class="data-style">{{steps}}</td>
+      <td class="separator-layout"></td>
+      <td>{{loc("taDuration")}}</td>
+      <td class="data-style">{{duration}} secs</td>
+      <td class="separator-layout"></td>
+      <td>{{loc("taOptimFor")}}</td>
+      <td class="data-style">{{field}}</td>
+    </tr>
+  </table>
+
   <flex-table #table class="table-panel"
               [columns]       = "columns"
               [data]          = "runs"
