--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/filtering/optimize/result.dialog.scss
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/filtering/optimize/result.dialog.scss
@@ -12,15 +12,21 @@
 
 //=============================================================================
 
-//table {
-//  width: 100%;
-//}
+table {
+  width: 100%;
+}
 
 //=============================================================================
 
-//table tr th {
-//  text-align: left;
-//}
+.separator-layout {
+  width: 150px;
+}
 
 //=============================================================================
 
+.data-style {
+  text-align: right;
+  font-weight: bold;
+}
+
+//=============================================================================
