--- a/src/app/layout/main-panel/work-panel/inventory/trading-system/edit/edit.panel.html
+++ b/src/app/layout/main-panel/work-panel/inventory/trading-system/edit/edit.panel.html
@@ -1,5 +1,5 @@
 <div class="main-layout">
-  <right-title-panel icon="cable" title="{{loc('new')}}" (onClose)="onClose()"></right-title-panel>
+  <right-title-panel icon="inventory" title="{{loc('new')}}" (onClose)="onClose()"></right-title-panel>
 
   <div class="form-layout">
     <input-text-required #tsNameCtrl       [(value)]="ts.name"           [label]="loc('name')" [len]="64"></input-text-required>
@@ -8,7 +8,7 @@
     <br/>
     <select-text-required #tsPortfolioCtrl [(key)]="ts.portfolioId"      [label]="loc('portfolio')" keyField="id" valueField="name" [list]="portfolios"></select-text-required>
     <br/>
-    <select-text-required #tsFeedCtrl      [(key)]="ts.productFeedId"    [label]="loc('feed')"      keyField="id" valueField="name" [list]="feeds"></select-text-required>
+    <select-text-required #tsDataCtrl      [(key)]="ts.productDataId"    [label]="loc('data')"      keyField="id" valueField="name" [list]="data"></select-text-required>
     <br/>
     <select-text-required #tsBrokerCtrl    [(key)]="ts.productBrokerId"  [label]="loc('broker')"    keyField="id" valueField="name" [list]="brokers"></select-text-required>
     <br/>
