--- a/src/app/component/form/select-required/select-text-required.html
+++ b/src/app/component/form/select-required/select-text-required.html
@@ -2,8 +2,8 @@
 	<mat-label>{{label}}</mat-label>
 	<mat-select [formControl]="formControl" [errorStateMatcher]="matcher" required>
 		<mat-option *ngFor="let item of list" [value]="item[keyField]">{{item[valueField]}}</mat-option>
+    <mat-option *ngFor="let key  of mapKeys()" [value]="key">{{mapValue(key)}}</mat-option>
 	</mat-select>
-<!--	<mat-hint>Errors appear instantly!</mat-hint>-->
 	<mat-error *ngIf="formControl.hasError('required')">
 		{{loc("input.required")}}
 	</mat-error>
