--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/filtering/optimize/parameter.dialog.html
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/filtering/optimize/parameter.dialog.html
@@ -26,11 +26,11 @@
       <td>{{loc("positiveProfit")}}</td>
       <td>{{loc("days")}}</td>
       <td>
-        <input-int-required *ngIf="!options.posProDays.enabled" [(value)]="options.posProDays.curValue" [label]="loc('curValue')" [min]="1" [max]="300"></input-int-required>
+        <input-number-required *ngIf="!options.posProDays.enabled" [(value)]="options.posProDays.curValue" [label]="loc('curValue')" [min]="1" [max]="300"></input-number-required>
 
-        <input-int-required *ngIf="options.posProDays.enabled" [(value)]="options.posProDays.minValue" [label]="loc('minValue')" [min]="1" [max]="300"></input-int-required>
-        <input-int-required *ngIf="options.posProDays.enabled" [(value)]="options.posProDays.maxValue" [label]="loc('maxValue')" [min]="1" [max]="300"></input-int-required>
-        <input-int-required *ngIf="options.posProDays.enabled" [(value)]="options.posProDays.step"     [label]="loc('step')"     [min]="1" [max]="300"></input-int-required>
+        <input-number-required *ngIf="options.posProDays.enabled" [(value)]="options.posProDays.minValue" [label]="loc('minValue')" [min]="1" [max]="300"></input-number-required>
+        <input-number-required *ngIf="options.posProDays.enabled" [(value)]="options.posProDays.maxValue" [label]="loc('maxValue')" [min]="1" [max]="300"></input-number-required>
+        <input-number-required *ngIf="options.posProDays.enabled" [(value)]="options.posProDays.step"     [label]="loc('step')"     [min]="1" [max]="300"></input-number-required>
       </td>
     </tr>
 
@@ -46,11 +46,11 @@
       <td>{{loc("oldVsNewPeriod")}}</td>
       <td>{{loc("oldDays")}}</td>
       <td>
-        <input-int-required *ngIf="!options.oldNewOldDays.enabled" [(value)]="options.oldNewOldDays.curValue" [label]="loc('curValue')" [min]="1" [max]="600"></input-int-required>
+        <input-number-required *ngIf="!options.oldNewOldDays.enabled" [(value)]="options.oldNewOldDays.curValue" [label]="loc('curValue')" [min]="1" [max]="600"></input-number-required>
 
-        <input-int-required *ngIf="options.oldNewOldDays.enabled" [(value)]="options.oldNewOldDays.minValue" [label]="loc('minValue')" [min]="1" [max]="600"></input-int-required>
-        <input-int-required *ngIf="options.oldNewOldDays.enabled" [(value)]="options.oldNewOldDays.maxValue" [label]="loc('maxValue')" [min]="1" [max]="600"></input-int-required>
-        <input-int-required *ngIf="options.oldNewOldDays.enabled" [(value)]="options.oldNewOldDays.step"     [label]="loc('step')"     [min]="1" [max]="600"></input-int-required>
+        <input-number-required *ngIf="options.oldNewOldDays.enabled" [(value)]="options.oldNewOldDays.minValue" [label]="loc('minValue')" [min]="1" [max]="600"></input-number-required>
+        <input-number-required *ngIf="options.oldNewOldDays.enabled" [(value)]="options.oldNewOldDays.maxValue" [label]="loc('maxValue')" [min]="1" [max]="600"></input-number-required>
+        <input-number-required *ngIf="options.oldNewOldDays.enabled" [(value)]="options.oldNewOldDays.step"     [label]="loc('step')"     [min]="1" [max]="600"></input-number-required>
       </td>
     </tr>
 
@@ -66,11 +66,11 @@
       <td>{{loc("oldVsNewPeriod")}}</td>
       <td>{{loc("newDays")}}</td>
       <td>
-        <input-int-required *ngIf="!options.oldNewNewDays.enabled" [(value)]="options.oldNewNewDays.curValue" [label]="loc('curValue')" [min]="1" [max]="300"></input-int-required>
+        <input-number-required *ngIf="!options.oldNewNewDays.enabled" [(value)]="options.oldNewNewDays.curValue" [label]="loc('curValue')" [min]="1" [max]="300"></input-number-required>
 
-        <input-int-required *ngIf="options.oldNewNewDays.enabled" [(value)]="options.oldNewNewDays.minValue" [label]="loc('minValue')" [min]="1" [max]="300"></input-int-required>
-        <input-int-required *ngIf="options.oldNewNewDays.enabled" [(value)]="options.oldNewNewDays.maxValue" [label]="loc('maxValue')" [min]="1" [max]="300"></input-int-required>
-        <input-int-required *ngIf="options.oldNewNewDays.enabled" [(value)]="options.oldNewNewDays.step"     [label]="loc('step')"     [min]="1" [max]="300"></input-int-required>
+        <input-number-required *ngIf="options.oldNewNewDays.enabled" [(value)]="options.oldNewNewDays.minValue" [label]="loc('minValue')" [min]="1" [max]="300"></input-number-required>
+        <input-number-required *ngIf="options.oldNewNewDays.enabled" [(value)]="options.oldNewNewDays.maxValue" [label]="loc('maxValue')" [min]="1" [max]="300"></input-number-required>
+        <input-number-required *ngIf="options.oldNewNewDays.enabled" [(value)]="options.oldNewNewDays.step"     [label]="loc('step')"     [min]="1" [max]="300"></input-number-required>
       </td>
     </tr>
 
@@ -86,11 +86,11 @@
       <td>{{loc("oldVsNewPeriod")}}</td>
       <td>{{loc("oldPerc")}}</td>
       <td>
-        <input-int-required *ngIf="!options.oldNewOldPerc.enabled" [(value)]="options.oldNewOldPerc.curValue" [label]="loc('curValue')" [min]="1" [max]="150"></input-int-required>
+        <input-number-required *ngIf="!options.oldNewOldPerc.enabled" [(value)]="options.oldNewOldPerc.curValue" [label]="loc('curValue')" [min]="1" [max]="150"></input-number-required>
 
-        <input-int-required *ngIf="options.oldNewOldPerc.enabled" [(value)]="options.oldNewOldPerc.minValue" [label]="loc('minValue')" [min]="1" [max]="150"></input-int-required>
-        <input-int-required *ngIf="options.oldNewOldPerc.enabled" [(value)]="options.oldNewOldPerc.maxValue" [label]="loc('maxValue')" [min]="1" [max]="150"></input-int-required>
-        <input-int-required *ngIf="options.oldNewOldPerc.enabled" [(value)]="options.oldNewOldPerc.step"     [label]="loc('step')"     [min]="1" [max]="150"></input-int-required>
+        <input-number-required *ngIf="options.oldNewOldPerc.enabled" [(value)]="options.oldNewOldPerc.minValue" [label]="loc('minValue')" [min]="1" [max]="150"></input-number-required>
+        <input-number-required *ngIf="options.oldNewOldPerc.enabled" [(value)]="options.oldNewOldPerc.maxValue" [label]="loc('maxValue')" [min]="1" [max]="150"></input-number-required>
+        <input-number-required *ngIf="options.oldNewOldPerc.enabled" [(value)]="options.oldNewOldPerc.step"     [label]="loc('step')"     [min]="1" [max]="150"></input-number-required>
       </td>
     </tr>
 
@@ -106,11 +106,11 @@
       <td>{{loc("winningPerc")}}</td>
       <td>{{loc("days")}}</td>
       <td>
-        <input-int-required *ngIf="!options.winPercDays.enabled" [(value)]="options.winPercDays.curValue" [label]="loc('curValue')" [min]="1" [max]="300"></input-int-required>
+        <input-number-required *ngIf="!options.winPercDays.enabled" [(value)]="options.winPercDays.curValue" [label]="loc('curValue')" [min]="1" [max]="300"></input-number-required>
 
-        <input-int-required *ngIf="options.winPercDays.enabled" [(value)]="options.winPercDays.minValue" [label]="loc('minValue')" [min]="1" [max]="300"></input-int-required>
-        <input-int-required *ngIf="options.winPercDays.enabled" [(value)]="options.winPercDays.maxValue" [label]="loc('maxValue')" [min]="1" [max]="300"></input-int-required>
-        <input-int-required *ngIf="options.winPercDays.enabled" [(value)]="options.winPercDays.step"     [label]="loc('step')"     [min]="1" [max]="300"></input-int-required>
+        <input-number-required *ngIf="options.winPercDays.enabled" [(value)]="options.winPercDays.minValue" [label]="loc('minValue')" [min]="1" [max]="300"></input-number-required>
+        <input-number-required *ngIf="options.winPercDays.enabled" [(value)]="options.winPercDays.maxValue" [label]="loc('maxValue')" [min]="1" [max]="300"></input-number-required>
+        <input-number-required *ngIf="options.winPercDays.enabled" [(value)]="options.winPercDays.step"     [label]="loc('step')"     [min]="1" [max]="300"></input-number-required>
       </td>
     </tr>
 
@@ -126,11 +126,11 @@
       <td>{{loc("winningPerc")}}</td>
       <td>{{loc("percentage")}}</td>
       <td>
-        <input-int-required *ngIf="!options.winPercPerc.enabled" [(value)]="options.winPercPerc.curValue" [label]="loc('curValue')" [min]="1" [max]="100"></input-int-required>
+        <input-number-required *ngIf="!options.winPercPerc.enabled" [(value)]="options.winPercPerc.curValue" [label]="loc('curValue')" [min]="1" [max]="100"></input-number-required>
 
-        <input-int-required *ngIf="options.winPercPerc.enabled" [(value)]="options.winPercPerc.minValue" [label]="loc('minValue')" [min]="1" [max]="100"></input-int-required>
-        <input-int-required *ngIf="options.winPercPerc.enabled" [(value)]="options.winPercPerc.maxValue" [label]="loc('maxValue')" [min]="1" [max]="100"></input-int-required>
-        <input-int-required *ngIf="options.winPercPerc.enabled" [(value)]="options.winPercPerc.step"     [label]="loc('step')"     [min]="1" [max]="100"></input-int-required>
+        <input-number-required *ngIf="options.winPercPerc.enabled" [(value)]="options.winPercPerc.minValue" [label]="loc('minValue')" [min]="1" [max]="100"></input-number-required>
+        <input-number-required *ngIf="options.winPercPerc.enabled" [(value)]="options.winPercPerc.maxValue" [label]="loc('maxValue')" [min]="1" [max]="100"></input-number-required>
+        <input-number-required *ngIf="options.winPercPerc.enabled" [(value)]="options.winPercPerc.step"     [label]="loc('step')"     [min]="1" [max]="100"></input-number-required>
       </td>
     </tr>
 
@@ -146,11 +146,11 @@
       <td>{{loc("equityVsAverage")}}</td>
       <td>{{loc("days")}}</td>
       <td>
-        <input-int-required *ngIf="!options.equAvgDays.enabled" [(value)]="options.equAvgDays.curValue" [label]="loc('curValue')" [min]="1" [max]="300"></input-int-required>
+        <input-number-required *ngIf="!options.equAvgDays.enabled" [(value)]="options.equAvgDays.curValue" [label]="loc('curValue')" [min]="1" [max]="300"></input-number-required>
 
-        <input-int-required *ngIf="options.equAvgDays.enabled" [(value)]="options.equAvgDays.minValue" [label]="loc('minValue')" [min]="1" [max]="300"></input-int-required>
-        <input-int-required *ngIf="options.equAvgDays.enabled" [(value)]="options.equAvgDays.maxValue" [label]="loc('maxValue')" [min]="1" [max]="300"></input-int-required>
-        <input-int-required *ngIf="options.equAvgDays.enabled" [(value)]="options.equAvgDays.step"     [label]="loc('step')"     [min]="1" [max]="300"></input-int-required>
+        <input-number-required *ngIf="options.equAvgDays.enabled" [(value)]="options.equAvgDays.minValue" [label]="loc('minValue')" [min]="1" [max]="300"></input-number-required>
+        <input-number-required *ngIf="options.equAvgDays.enabled" [(value)]="options.equAvgDays.maxValue" [label]="loc('maxValue')" [min]="1" [max]="300"></input-number-required>
+        <input-number-required *ngIf="options.equAvgDays.enabled" [(value)]="options.equAvgDays.step"     [label]="loc('step')"     [min]="1" [max]="300"></input-number-required>
       </td>
     </tr>
 
