--- a/src/app/layout/main-panel/work-panel/inventory/product-broker/edit/product-broker.edit.html
+++ b/src/app/layout/main-panel/work-panel/inventory/product-broker/edit/product-broker.edit.html
@@ -1,13 +1,11 @@
 <div class="main-layout">
-  <right-title-panel icon="currency_exchange" title="{{loc('new')}}" (onClose)="onClose()"></right-title-panel>
+  <right-title-panel icon="currency_exchange" title="{{loc('edit')}}" (onClose)="onClose()"></right-title-panel>
 
   <div class="form-layout">
-    <input-text-required   #pbSymbolCtrl       [label]="loc('symbol')"       [(value)]="pb.symbol"       [len]="16"></input-text-required><br/>
     <input-text-required   #pbNameCtrl         [label]="loc('name')"         [(value)]="pb.name"         [len]="64"></input-text-required><br/>
     <input-number-required #pbPointValueCtrl   [label]="loc('pointValue')"   [(value)]="pb.pointValue"   [min]="0"></input-number-required><br/>
     <input-number-required #pbCostPerTradeCtrl [label]="loc('costPerTrade')" [(value)]="pb.costPerTrade" [min]="0"></input-number-required><br/>
     <input-number-required #pbMarginValueCtrl  [label]="loc('marginValue')"  [(value)]="pb.marginValue"  [min]="0"></input-number-required><br/>
-    <input-text-required   #pbLocalClassCtrl   [label]="loc('localClass')"   [(value)]="pb.localClass"   [len]="8"></input-text-required><br/>
     <select-text-required  #pbMarketCtrl       [label]="loc('marketType')"   [(key)]  ="pb.marketType"  [map]="markets"></select-text-required><br/>
     <select-text-required  #pbProductCtrl      [label]="loc('productType')"  [(key)]  ="pb.productType" [map]="products"></select-text-required><br/>
     <select-text-required  #pbExchangeCtrl     [label]="loc('exchange')"     [(key)]  ="pb.exchangeId"  keyField="id" valueField="code" [list]="exchanges"></select-text-required>
