--- a/src/app/layout/main-panel/work-panel/inventory/product-data/view/product-data.view.html
+++ b/src/app/layout/main-panel/work-panel/inventory/product-data/view/product-data.view.html
@@ -13,40 +13,40 @@
       <td>{{mod("symbol")}}</td>
       <td class="data-style">{{pd.symbol}}</td>
       <td class="separator-width"></td>
-      <td>{{mod("localClass")}}</td>
-      <td class="data-style">{{pd.localClass}}</td>
+      <td>{{mod("marketType")}}</td>
+      <td class="data-style">{{market}}</td>
     </tr>
 
     <tr>
       <td>{{mod("name")}}</td>
       <td class="data-style">{{pd.name}}</td>
       <td></td>
-      <td>{{mod("marketType")}}</td>
-      <td class="data-style">{{market}}</td>
+      <td>{{mod("productType")}}</td>
+      <td class="data-style">{{product}}</td>
     </tr>
 
     <tr>
       <td>{{mod("connectionCode")}}</td>
       <td class="data-style">{{pd.connection?.code}}</td>
       <td></td>
-      <td>{{mod("productType")}}</td>
-      <td class="data-style">{{product}}</td>
+      <td>{{mod("createdAt")}}</td>
+      <td class="data-style">{{pd.createdAt}}</td>
     </tr>
 
     <tr>
       <td>{{mod("exchangeCode")}}</td>
       <td class="data-style">{{pd.exchange?.code}}</td>
       <td></td>
-      <td>{{mod("createdAt")}}</td>
-      <td class="data-style">{{pd.createdAt}}</td>
+      <td>{{mod("updatedAt")}}</td>
+      <td class="data-style">{{pd.updatedAt}}</td>
     </tr>
 
     <tr>
       <td>{{mod("increment")}}</td>
       <td class="data-style">{{pd.increment}}</td>
       <td></td>
-      <td>{{mod("updatedAt")}}</td>
-      <td class="data-style">{{pd.updatedAt}}</td>
+      <td></td>
+      <td class="data-style"></td>
     </tr>
   </table>
 
